<resources>
    <string name="app_name" translatable="false">PlanMe</string>
    <string name="title_activity_timeline" translatable="false">timelineActivity</string>
    <string name="description">Description</string>
    <string name="typeEvent">Event Type</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="creator">Creator</string>
    <string name="participants">Participants</string>
    <string name="calling">Call Creator</string>
    <string name="joining">Join Event</string>
    <string name="newplan">New Plan</string>
    <string name="nameplan">Plan Name</string>
    <string name="photo">Take a Photo</string>
    <string name="publish">Publish Plan</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotPass">¿Forgot password?</string>
    <string name="msgForgotPass">Your email ...</string>
    <string name="getPassMsg">Send password reset email</string>
    <string name="toastMsgGetPass">We will send you a email with instructions to
     resete your password</string>
    <string name="createAccount">Create an Account</string>

    <string-array name="array_months">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abríl</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

    <string-array name="array_categories">
        <item>Sports</item>
        <item>Social</item>
        <item>Party</item>
        <item>Cultural</item>
        <item>Science</item>
        <item>Entertaiment</item>
    </string-array>

    <string name="createPlan">Create Plan</string>
    <string name="lookPlan">Look for a Plan</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birthday">Birthday</string>
    <string name="phone">Phone Number</string>
    <string name="sex">Sex</string>
    <string name="confirm">Confirm</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="modify">Modify</string>
    <string name="date">Date</string>
    <string name="settime">Set Time</string>
    <string name="setdate">Set Date</string>
    <string name="title_activity_maps">Map</string>
    <string name="disjoin">Disjoin</string>
    <string name="createby">Created by:</string>
    <string name="editprofile">Edit Profile</string>
    <string name="myprofile">My Profile</string>
    <string name="changepassword">Change Password</string>
    <string name="activeevents">All Events</string>
    <string name="myevents">My Events</string>
    <string name="joined">Joined to the Event</string>
    <string name="disjoined">Disjoined</string>
    <string name="welcome">"Welcome "</string>
    <string name="eventname">"Name: "</string>
    <string name="descriptionevent">"Description: "</string>
    <string name="timeevent">"Time: "</string>
    <string name="placeevent">"Place: "</string>
    <string name="typeevent">"Type: "</string>
    <string name="profilename">"Name: "</string>
    <string name="profilesurname">"Surname: "</string>
    <string name="profileemail">"Email: "</string>
    <string name="profilenumber">"Phone Number: "</string>
    <string name="profileage">"Age: "</string>
    <string name="save">Save</string>
    <string name="currentPassword">Current password</string>
    <string name="confirmPass">Confirm password</string>
    <string name="newPass">New password</string>
    <string name="choosephoto">Choose Photo:</string>
    <string name="wrongemail">Wrong email, try again</string>
    <string name="dateevent">"Date: "</string>
    <string name="emptyField">Empty fields</string>
</resources>
