<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itesm.mx.planme.EventoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typeEvent"
        android:id="@+id/textView_newPlan"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/textView_description1"
        android:layout_below="@+id/textView_newPlan"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/textView_newPlan"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="something about event"
        android:id="@+id/textView_description2"
        android:layout_below="@+id/textView_description1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textView_description2"
        android:layout_centerHorizontal="true"
        android:weightSum="1"
        android:layout_marginTop="5dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/time"
            android:id="@+id/textView_time1"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="time"
            android:id="@+id/textView_time2"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="5dp"
        android:weightSum="1"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/place"
            android:id="@+id/textView_place"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:id="@+id/imageView_place"
            android:layout_weight="0.65" />
    </LinearLayout>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/creator"
        android:id="@+id/tv_creador"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#0e0bd2" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageView_creator"
        android:layout_below="@+id/tv_creador"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView_creator"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/participants"
            android:id="@+id/textView_participants"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="number of participants"
            android:id="@+id/textView_nParticipants"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/calling"
            android:id="@+id/btn_llamar"
            android:layout_gravity="right"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joining"
            android:id="@+id/btn_unirse"
            android:layout_gravity="left"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>
