<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itesm.mx.planme.EventoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newplan"
        android:id="@+id/textView_newPlan"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:weightSum="1"
        android:layout_marginTop="5dp"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/textView_newPlan">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/nameplan"
            android:id="@+id/textView_namePlan"
            android:gravity="center"
            android:textStyle="bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_PlanName"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="1"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/description"
            android:id="@+id/textView_description1"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Write something about the plan"
            android:id="@+id/textView_description2"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="1"
        android:id="@+id/linearLayout4"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/time"
            android:id="@+id/textView_time1"
            android:gravity="top|center"
            android:textStyle="bold"
            android:layout_weight="0.5"
            android:layout_gravity="top" />

        <Spinner
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/sp_horas"
            android:spinnerMode="dropdown"
            android:layout_marginLeft="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text=":"
            android:id="@+id/textView22"
            android:layout_weight="0.13"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_gravity="top" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sp_minutos"
            android:spinnerMode="dropdown"
            android:layout_marginLeft="15dp"
            android:contentDescription="minutos" />

    </LinearLayout>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_place"
        android:layout_below="@+id/linearLayout4"
        android:layout_centerHorizontal="true"
        android:hint="@string/place" />

    <Spinner
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_place"
        android:layout_centerHorizontal="true"
        android:id="@+id/sp_categoria"
        android:spinnerMode="dropdown"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo"
        android:id="@+id/btn_foto"
        android:layout_below="@+id/sp_categoria"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/imageView_photo"
        android:layout_below="@+id/btn_foto"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish"
        android:id="@+id/btn_publicar"
        android:layout_below="@+id/imageView_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />
</RelativeLayout>
