<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itesm.mx.planme.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/et_email"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"
        android:text="5@gmail.com" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/textView17"
        android:layout_below="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="19dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_passwd"
        android:layout_below="@+id/textView17"
        android:layout_centerHorizontal="true"
        android:text="123456" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/textView19"
        android:layout_above="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:textSize="19dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPass"
        android:id="@+id/tv_forgotPass"
        android:layout_below="@+id/et_passwd"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="false"
        android:clickable="false"
        android:textColor="#362ccd"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btn_login"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimary"
        app:backgroundTint="#afc781"

        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logoPlanMe"
        android:layout_marginBottom="36dp"
        android:id="@+id/imageView5"
        android:layout_above="@+id/textView19"
        android:layout_alignParentStart="true" />

</RelativeLayout>
